Changed the api again, added timestamp of update and probably some style changes I don't remember

--- a/JSPros/covid19/index.html
+++ b/JSPros/covid19/index.html
@@ -29,8 +29,8 @@
             <div class="row justify-content-center my-5">
 
               <div class="col-12 text-center">
-                <h2 style="color:#e66739;">Coronavirus Live Update</h2>
-                <h5 style="color:#32a852">Last updated: <span id="time"></span> seconds ago.</h5>
+                <h2 style="color:#e66739;">Overall Statistics</h2>
+                <h5 style="color:#32a852">Last updated: <span id="time"></span></h5>
               </div>
             </div>
 
@@ -39,11 +39,11 @@
               <div class="col-md-4 totalRecovered my-3">
 
                 <div class="card text-center" style="border: 1px solid #F2AA4CFF;">
-                  <div class="card-header font-weight-bold" style="background-color: #606060FF; color:#8BD056;">
+                  <div class="card-header font-weight-bold" style="background-color: #606060FF; color:#D6ED17FF;">
                     Total Recovered
                   </div>
                   <div class="card-body">
-                    <h3 class="card-title" id="totalRecoveredNum" style="color:#06d444;"></h3>
+                    <h3 class="card-title" id="totalRecoveredNum" style="color:#8BD056;"></h3>
                   </div>
                   <div class="card-footer text-muted">
                     Less than a minute ago
@@ -95,7 +95,7 @@
             <div class="row justify-content-center my-5">
 
               <div class="col-12 text-center mt-5">
-                <h2 style="color:#e66739;">Last 24 Hours Update</h2>
+                <h2 style="color:#e66739;">Latest Update</h2>
               </div>
             </div>
 
@@ -104,11 +104,11 @@
               <div class="col-md-4 totalRecovered my-3">
 
                 <div class="card text-center" style="border: 1px solid #F2AA4CFF;">
-                  <div class="card-header font-weight-bold" style="background-color: #606060FF; color:#8BD056;">
-                    Active Cases
+                  <div class="card-header font-weight-bold" style="background-color: #606060FF; color:#D6ED17FF;">
+                    Newly Recovered
                   </div>
                   <div class="card-body">
-                    <h3 class="card-title" id="twentyFourTotalRecoveredNum" style="color:#06d444;"></h3>
+                    <h3 class="card-title" id="twentyFourTotalRecoveredNum" style="color:#8BD056;"></h3>
                   </div>
                   <div class="card-footer text-muted">
                     Less than a minute ago
@@ -121,7 +121,7 @@
 
                 <div class="card text-center" style="border: 1px solid #F2AA4CFF;">
                   <div class="card-header font-weight-bold" style="background-color: #606060FF; color:#D6ED17FF">
-                    New Confirmed
+                    Newly Confirmed
                   </div>
                   <div class="card-body">
                     <h3 class="card-title" id="twentyFourTotalConfirmedNum" style="color:#e3b200;"></h3>
