Added news section and that's it for now

--- a/JSPros/covid19/index.html
+++ b/JSPros/covid19/index.html
@@ -154,6 +154,14 @@
           </div>
           <!-- end of 24 hours updates -->
 
+          <!-- start of news section -->
+          <div class="newsSection my-5" id="news">
+
+            <h2 style="color:#e66739;" class="text-center my-5">Latest News</h2>
+
+          </div>
+          <!-- end of news section -->
+
         </div>
 
       </div>
