--- a/JSPros/covid19/index.html
+++ b/JSPros/covid19/index.html
@@ -18,7 +18,7 @@
         <div class="mainHeading row">
           <div class="col-12 text-center my-5">
             <h1 class="my-3">Covid19 Information</h1>
-            <h4>All codes available at <a href="https://github.com/M4hd1BD/m4hd1bd.github.io">Github</a></h4>
+            <h4>All codes available at <a href="https://github.com/M4hd1BD/m4hd1bd.github.io/tree/master/JSPros/covid19" target="_blank">Github</a></h4>
           </div>
         </div>
 
@@ -201,7 +201,7 @@
             </div>
 
           </div>
-          
+
           <!-- start country stats -->
           <div class="my-5" id="countryStats" style="display:none;">
 
